--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@zi-shui/utils": "workspace:*",
     "typescript": "^4.7.4",
     "vue": "^3.2.37"
+  },
+  "devDependencies": {
+    "unplugin-vue-define-options": "^0.6.2"
   }
 }
