--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.20.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "recommended": "link:@vue/typescript/recommended",
     "sass": "^1.53.0",
     "unplugin-vue-define-options": "^0.6.2"
   }
