--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "pnpm -C play dev"
+    "dev": "pnpm -C play dev",
+    "doc:dev": "pnpm -C docs dev"
   },
   "keywords": [],
   "author": "",
